@@ -1,6 +1,7 @@
 cm4all-workshop (0.1.4) unstable; urgency=low
 
   * set supplementary groups
+  * delete pidfile before exiting
   * moved VERSION to version.h
   * use start-stop-daemon instead of LSB's start_daemon due to Debian bug
     #406059
